syntax = "proto3";

package cealn.workspace_builder;

import "google/protobuf/timestamp.proto";

import "event.proto";

service WorkspaceBuilder {
    rpc Status (ServerStatusRequest) returns (ServerStatus);
    rpc Stop (StopRequest) returns (StopResponse);

    rpc Build (BuildRequest) returns (stream cealn.event.BuildEvent);

    rpc Run (stream RunRequest) returns (stream cealn.event.BuildEvent);
}

message ServerStatusRequest {
}

message ServerStatus {
    google.protobuf.Timestamp server_executable_mtime = 1;
    repeated EnvironmentEntry launch_environment_variables = 2;
}

message EnvironmentEntry {
    bytes key = 1;
    bytes value = 2;
}

message StopRequest {}

message StopResponse {}

message BuildRequest {
    repeated string targets = 1;

    string default_package = 2;

    BuildConfig build_config = 3;

    bool keep_going = 4;

    bool watch = 5;
}

message RunRequest {
    string target = 1;

    string executable_name = 2;

    string default_package = 3;

    BuildConfig build_config = 4;
}

message BuildConfig {
    repeated BuildConfigOption options = 1;
    repeated BuildConfigOption host_options = 2;
}

message BuildConfigOption {
    Reference key = 1;
    Reference value = 2;
}

message Reference {
    string source_label = 1;
    string qualname = 2;
}
